--- a/index.css
+++ b/index.css
@@ -1,96 +1,127 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
-    overflow: hidden;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #155;
-    color: white;
-  }
+  background-color: #333;
+  overflow: hidden;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #155;
+  color: white;
+}
 
 h1 {
-    color: #155;
-    font-size: 50;
-    /* margin-left: 0;
+  color: #155;
+  font-size: 50;
+  /* margin-left: 0;
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto; */
-    text-align: left;
-    /* font-family: "Monsterrat", sans-serif; */
+  text-align: left;
+  /* font-family: "Monsterrat", sans-serif; */
 
 }
 
 ul {
-    display: flex;
-    width: 300;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  width: 300;
+  margin: 0;
+  padding: 0;
 }
 
 ul li {
-    display: inline;
-    list-style: none;
-    margin-left: auto;
-    margin-right: auto;
-    top: 0px;
-    height: 50px;
+  display: inline;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  top: 0px;
+  height: 50px;
 }
 
 canvas {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
-    position: absolute;
-    top: 10%;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
+  position: absolute;
+  top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .overlay-text {
-    display: block;
-    width: 200;
+  display: block;
+  width: 200;
 
-    position: absolute;
-    top: 30%;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
+  position: absolute;
+  top: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .main-container {
-    /* display: flex; */
+  /* display: flex; */
 }
 
 .the-rest {
-    position: absolute;
-    top: 80%;
+  position: absolute;
+  top: 80%;
+}
+
+.link-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 27%;
+
+  position: absolute;
+  top: 44%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.link-list a {
+  text-decoration: none;
+  color: #155;
+  font-size: x-large;
+  padding: 5px;
+}
+
+.link-list a:hover {
+  color: #eee;
+  background-color: #155;
+}
+
+.link-list i {
+  padding-right: 2px;
 }
